# sebure

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  tasks.md  test_dpos  test_dpos.rs
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/blockchain/: block.rs  mempool.rs  mod.rs  sharding.rs  state.rs  transaction.rs
core/src/consensus/: dpos.rs  mod.rs  role_assignment.rs  validator.rs
core/src/crypto/: address.rs  bip39_wordlist.rs  hash.rs  hdwallet.rs  keystore.rs  mod.rs  signature.rs
core/src/network/: bandwidth_manager.rs  bloom_filter.rs  discovery.rs  fast_path.rs  mesh_topology.rs  message.rs  mod.rs  node_communication.rs  peer.rs  protocol.rs  reputation.rs  routing.rs  supernode.rs  transport.rs
core/src/services/: mod.rs  resource_manager.rs  transaction_service.rs  validation.rs
core/src/storage/: chain_store.rs  mod.rs  state_db.rs
core/src/storage/state_db/: account.rs  database_types.rs  iterator.rs  key_impl.rs  keys.rs  memory_storage.rs  mod.rs  state_db.rs  tests.rs
core/src/types/: mod.rs  node.rs  transaction.rs
core/src/utils/: mod.rs  serialization.rs
core/tests/: crypto_tests.rs
dev/: PRD.md
docs/: TECHNICAL_REFERENCE.md
donetasks/: TASK-3.3-CHANGES.md  TASK-3.4-CHANGES.md  TASK-3.5-CHANGES.md  TASK-3.6-CHANGES.md
ffi/: Cargo.toml
ffi/src/: lib.rs  transaction_bridge.rs  validation_bridge.rs
perf/: Cargo.toml
perf/tests/: mod.rs
perf/tests/benchmarks/: mod.rs
perf/tests/network_sim/: mod.rs
perf/tests/regression_monitoring/: mod.rs
perf/tests/stress_tests/: mod.rs
tests/: main.rs
tests/dpos/: block.rs  consensus.rs  consensus_state.rs  dpos_consensus.rs  mod.rs  reward.rs  test_helpers.rs  tests.rs  types.rs  validator.rs
ui/: TESTING.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/kotlin/com/sebure/ui/: MainActivity.kt
ui/integration_test/: app_test.dart
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/src/ffi/: sebure_ffi.dart
ui/lib/src/models/: app_state.dart  contact.dart
ui/lib/src/plugin/: plugin_base.dart  plugin_manager.dart  plugin_manifest.dart  sample_plugin.dart
ui/lib/src/screens/: contacts_screen.dart  home_screen.dart  preferences_screen.dart  receive_screen.dart  send_transaction_screen.dart  transaction_history_screen.dart  validation_settings_screen.dart  wallet_screen.dart
ui/lib/src/services/: blockchain_service.dart  config_service.dart  contact_service.dart  qr_service.dart  transaction_service.dart  validation_service.dart
ui/lib/src/widgets/: network_statistics.dart  node_control_panel.dart  resource_usage_chart.dart
ui/linux/: CMakeLists.txt
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: desktop_framework_tests.dart  ffi_test.dart  widget_test.dart
