[package]
name = "sebure-core"
version = "0.1.0"
edition = "2021"
description = "Core blockchain components for SEBURE Blockchain"
authors = ["SEBURE Team"]

[dependencies]
# Cryptography
ed25519-dalek = "1.0"      # Ed25519 signature generation and verification
sha2 = "0.10"              # SHA-256 and other SHA-2 variants
blake3 = "1.3"             # BLAKE3 for high-speed hashing

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"            # Binary serialization

# Concurrency and async
tokio = { version = "1.21", features = ["full"] }
futures = "0.3"
rayon = "1.5"              # Data parallelism library

# Networking
libp2p = "0.50"            # P2P networking
async-std = "1.12"

# Storage
rocksdb = { version = "0.20", features = ["multi-threaded-cf"] }  # RocksDB for storage

# Utilities
thiserror = "1.0"          # Error handling
log = "0.4"                # Logging
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"               # Random number generation
hex = "0.4"                # Hex encoding/decoding

[dev-dependencies]
criterion = "0.4"          # Benchmarking
mockall = "0.11"           # Mocking for tests
test-log = "0.2"           # Test logging

[lib]
name = "sebure_core"
path = "src/lib.rs"

# Uncomment when benchmarks are implemented
# [[bench]]
# name = "blockchain_bench"
# harness = false
